# mfi_tools

./: .gitignore  README.md  pyproject.toml  setup.py  test_factsheet.py
mfi_tools/: hooks.py  modules.txt  patches.txt
mfi_tools/mfi_tools/doctype/balanza_comprobacion_eeff/: balanza_comprobacion_eeff.js  balanza_comprobacion_eeff.json  balanza_comprobacion_eeff.py
mfi_tools/mfi_tools/doctype/celda_seccion_nota_eeff/: celda_seccion_nota_eeff.json  celda_seccion_nota_eeff.py
mfi_tools/mfi_tools/doctype/cifra_nota_eeff/: cifra_nota_eeff.json  cifra_nota_eeff.py
mfi_tools/mfi_tools/doctype/columna_seccion_nota_eeff/: columna_seccion_nota_eeff.json  columna_seccion_nota_eeff.py
mfi_tools/mfi_tools/doctype/cuenta_regla_mapeo_eeff/: cuenta_regla_mapeo_eeff.json  cuenta_regla_mapeo_eeff.py
mfi_tools/mfi_tools/doctype/dato_estadistico_eeff/: dato_estadistico_eeff.json  dato_estadistico_eeff.py
mfi_tools/mfi_tools/doctype/datos_estadisticos_eeff/: datos_estadisticos_eeff.js  datos_estadisticos_eeff.json  datos_estadisticos_eeff.py
mfi_tools/mfi_tools/doctype/estado_financiero_eeff/: estado_financiero_eeff.js  estado_financiero_eeff.json  estado_financiero_eeff.py
mfi_tools/mfi_tools/doctype/factsheet/: factsheet.js  factsheet.json  factsheet.py
mfi_tools/mfi_tools/patches/: reload_panel_mfi_tools_workspace_v4.py
mfi_tools/mfi_tools/services/: formula_engine.py  mapeo.py
mfi_tools/mfi_tools/utils/: customer.py  estado_line_format.py  migrate.py  nota_eeff.py  nota_tablas.py  word_export.py
mfi_tools/public/: build.json
(+47 files in other folders)
