[project]
name = "mfi_tools"
authors = [
    { name = "Ernesto Ruiz Escorcia", email = "eruiz@wbapps.com"}
]
description = "Herramienta para simplificar reporteria para instituciones de microfinanzas"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
